--- a/wisdomCampus/html/new_message.html
+++ b/wisdomCampus/html/new_message.html
@@ -50,7 +50,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">新消息</h1>
-			<a class="mui-icon mui-pull-right right-cancel">取消</a>
+			<a  class="mui-icon mui-pull-right right-cancel">取消</a>
 		</header>
 		<div class="mui-content">
 			<div class="weui-cells">
@@ -112,7 +112,9 @@
 			<a href="" class="weui-btn weui-btn_blue">发布</a>
 		</div>
 		<script src="../js/demoCssJs/jquery-2.1.4.js"></script>
+		<script src='../js/lib/vconsole/vconsole.min.js'></script>
 		<script src="../js/demoCssJs/jquery-weui.js"></script>
+		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript">
 		</script>
 	</body>
