--- a/wisdomCampus/html/check-detail.html
+++ b/wisdomCampus/html/check-detail.html
@@ -230,6 +230,8 @@
 	<script src='../js/lib/crypto-js/require.js'></script>
 	<script src='../js/utils/signHmacSHA1.js'></script>
 	<script src='../js/utils/sortSign.js'></script>
+	<script src="../js/utils/storageKeyName.js"></script>
+	<script src="../js/utils/store.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			var checkDetailData = new Vue({
 				el: "#checkDetailData",
