--- a/wisdomCampus/html/new_message.html
+++ b/wisdomCampus/html/new_message.html
@@ -32,14 +32,16 @@
 			.weui-cell__hd {
 				padding-right: 15px;
 			}
-			.weui-btn_blue{
+			
+			.weui-btn_blue {
 				background-color: #3C9BFE;
 				color: white;
 				margin-top: 16px;
 				margin-left: 5%;
 				margin-right: 5%;
 			}
-			.weui-btn_blue:hover{
+			
+			.weui-btn_blue:hover {
 				background-color: #0062CC;
 				color: white;
 			}
@@ -50,7 +52,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">新消息</h1>
-			<a  class="mui-icon mui-pull-right right-cancel">取消</a>
+			<a class="mui-icon mui-pull-right right-cancel">取消</a>
 		</header>
 		<div id="message" class="mui-content">
 			<div class="weui-cells">
@@ -62,10 +64,10 @@
 					<!--<div class="weui-cell__ft">0/64</div>-->
 				</div>
 				<div class="weui-cell" style="align-items: flex-start;">
-					<div class="weui-cell__hd" >内容</div>
+					<div class="weui-cell__hd">内容</div>
 					<div class="weui-cell__bd">
-						<textarea class="weui-textarea" style="padding: 0;margin-bottom: 0;" placeholder="请输入内容"  rows="4"></textarea>
-		    			<!--<div class="weui-textarea-counter">
+						<textarea class="weui-textarea" style="padding: 0;margin-bottom: 0;" placeholder="请输入内容" rows="4"></textarea>
+						<!--<div class="weui-textarea-counter">
 		    				<span>0</span>
 		    				/500
 		    			</div>-->
@@ -81,13 +83,13 @@
 								<!--<div class="weui-uploader__info">0/5</div>-->
 							</div>
 							<div class="weui-uploader__bd">
-										<ul class="weui-uploader__files" id="uploaderFiles">
-											<li v-for="(file,index) of uploadedFiles" @click="clickImg(index)" v-bind:class="['weui-uploader__file']" v-bind:style="{'background-image':'url('+file.ImgUrl+')'}"></li>
-										</ul>
-										<div class="weui-uploader__input-box" :style="displayAddBtn">
-											<input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" v-on:change="selectFile($event)">
-										</div>
-									</div>
+								<ul class="weui-uploader__files" id="uploaderFiles">
+									<li v-for="(file,index) of uploadedFiles" @click="clickImg(index)" v-bind:class="['weui-uploader__file']" v-bind:style="{'background-image':'url('+file.ImgUrl+')'}"></li>
+								</ul>
+								<div class="weui-uploader__input-box" :style="displayAddBtn">
+									<input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" v-on:change="selectFile($event)">
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -111,14 +113,14 @@
 			<a @click="clickSubmitBtn()" href="" class="weui-btn weui-btn_blue">发布</a>
 		</div>
 		<input id="qnInput" style="display: none;">
-			<div class="weui-gallery" :style="displayGallery" v-if="stat<2" style="z-index: 999999;position:absolute;">
-				<span class="weui-gallery__img" @click="clickGigImg" :style="{backgroundImage:'url('+selectImgPath+')'}"></span>
-				<div class="weui-gallery__opr">
-					<a href="javascript:" class="weui-gallery__del">
-						<i class="weui-icon-delete weui-icon_gallery-delete" @click="deleteImg"></i>
-					</a>
-				</div>
+		<div class="weui-gallery" :style="displayGallery" v-if="stat<2" style="z-index: 999999;position:absolute;">
+			<span class="weui-gallery__img" @click="clickGigImg" :style="{backgroundImage:'url('+selectImgPath+')'}"></span>
+			<div class="weui-gallery__opr">
+				<a href="javascript:" class="weui-gallery__del">
+					<i class="weui-icon-delete weui-icon_gallery-delete" @click="deleteImg"></i>
+				</a>
 			</div>
+		</div>
 		<script src="../js/demoCssJs/jquery-2.1.4.js"></script>
 		<script src="../js/vue.min.js"></script>
 		<script src='../js/lib/vconsole/vconsole.min.js'></script>
@@ -132,9 +134,14 @@
 		<script src="../js/lib/plupload/plupload.full.min.js"></script>
 		<script src="../js/utils/storageutil.js"></script>
 		<script src="../js/utils/cloudutil.js"></script>
+		<script src='../js/utils/store.js'></script>
+			<script src="../js/utils/storageKeyName.js"></script>
+				<script src="../js/publicProtocol.js"></script>
+				<script src='../js/lib/crypto-js/require.js'></script>
+				<script src='../js/utils/signHmacSHA1.js'></script>
 
 		<script type="text/javascript">
-						var uptokenData;
+			var uptokenData;
 			var qnFileUploader; //七牛上传控件对象
 			initQNUploader();
 			var message = new Vue({
@@ -188,10 +195,10 @@
 						});
 					},
 					clickSubmitBtn: function() { //提交按钮
-//						if(message.workTitle.trim().length == 0 && isNull(message.workTitle) && message.uploadedFiles.length == 0) {
-//							$.alert('请输入标题');
-//							return;
-//						}
+						//						if(message.workTitle.trim().length == 0 && isNull(message.workTitle) && message.uploadedFiles.length == 0) {
+						//							$.alert('请输入标题');
+						//							return;
+						//						}
 						//附件数组
 						var tempEncs = [];
 						for(var i = 0; i < message.uploadedFiles.length; i++) {
@@ -205,28 +212,28 @@
 							}
 							tempEncs.push(tempModel);
 						}
-						console.log(333333)
-//						$.showLoading('加载中...');
+						addNotice()
+						//						$.showLoading('加载中...');
 
-//						//14.作业管理
-//						var tempData = {
-//							cmd: 'work', //14.作业管理
-//							type: 'studo', //学生做作业
-//							colid: workId, //workdoid
-//							colv: message.workTitle, //作答内容
-//							encs: tempEncs //作答附件
-//						}
-//						unitWebsitePro(tempData, function(data) {
-//							$.hideLoading();
-//							if(data.RspCode == 0) {
-//								console.log('成功');
-//								$.toast("成功");
-//
-//								window.location.reload();
-//							} else {
-//								$.alert(data.RspTxt);
-//							}
-//						});
+						//						//14.作业管理
+						//						var tempData = {
+						//							cmd: 'work', //14.作业管理
+						//							type: 'studo', //学生做作业
+						//							colid: workId, //workdoid
+						//							colv: message.workTitle, //作答内容
+						//							encs: tempEncs //作答附件
+						//						}
+						//						unitWebsitePro(tempData, function(data) {
+						//							$.hideLoading();
+						//							if(data.RspCode == 0) {
+						//								console.log('成功');
+						//								$.toast("成功");
+						//
+						//								window.location.reload();
+						//							} else {
+						//								$.alert(data.RspTxt);
+						//							}
+						//						});
 					}
 				}
 			})
@@ -398,6 +405,31 @@
 					upToken = data;
 				});
 				return upToken;
+			}
+			var addNotice = function() {
+				var personal = store.get(window.storageKeyName.PERSONALINFO);
+				var tempData = {
+					schoolId: storageKeyName.SCHOOLID, //学校ID
+					noticeTitle: 'test', //标题
+					noticeContent: 'test', //内容
+					noticEncName: '', //附件名称
+					noticeEncAddr: '', //附件地址
+					smsSync: 0, //是否短信同步
+					sendManId: personal.utid, //发布人ID
+					sendManCode: personal.uid, //发布人账号
+					sendManName: personal.utname, //发布人姓名
+					receiveManIds: '', //接收人人ID
+					receiveManCodes: '', //接收人账号
+					receiveManNames: '', //接收人姓名
+				}
+				addNoticePro(tempData, function function_name(data) {
+					console.log(JSON.stringify(data))
+					if(data.RspCode == 0) {
+
+					} else {
+
+					}
+				});
 			}
 		</script>
 	</body>
