--- a/wisdomCampus/html/new-check.html
+++ b/wisdomCampus/html/new-check.html
@@ -208,7 +208,7 @@
 					},
 					selectPepole:function(){
 						var data = {
-							flag:1
+							flag:2//事务及文件
 						}
 						utils.hrefSessionStorage("selectPeople.html", data)
 					}
