--- a/wisdomCampus/html/new_message.html
+++ b/wisdomCampus/html/new_message.html
@@ -203,7 +203,7 @@
 					},
 					selectPepole:function(){
 						var data = {
-							flag:0
+							flag:1//1 通知公告
 						}
 						utils.hrefSessionStorage("selectPeople.html", data)
 					}
